--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -43,7 +43,7 @@
             font-size: 2.7rem;
             margin: 0;
             padding: 2rem 1rem;
-            background-color: #00A1E2;
+            background-color: #0d1c2c;
             color: white;
         }
 
@@ -90,11 +90,88 @@
         }
 
         .right-section ul {
-            border-left: 0.3rem solid #00A1E2;
+            border-left: 0.3rem solid #71aeef;
             list-style-type: none;
             padding-left: 0;
         }
 
+        .examples {
+            display: flex;
+            flex-wrap: wrap;
+            margin: 20px 0 20px -40px;
+        }
+
+        .example {
+            display: flex;
+            margin-left: 20px;
+            margin-bottom: 20px;
+            flex-direction: column;
+            width: 350px;
+            background-color: #205894;
+            color: white;
+        }
+
+        .example code {
+            color: lightgrey;
+        }
+
+        .example-header {
+            padding: 20px;
+            display: flex;
+            position: relative;
+        }
+
+        .example-header h4 {
+            margin: 0;
+            font-size: 1.4rem;
+            flex-grow: 1;
+            line-height: 1.5;
+        }
+
+        .example-description {
+            padding: 0 20px;
+            flex-grow: 1;
+        }
+
+        .example-paths {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .example-paths a {
+            display: block;
+            background-color: transparent;
+            font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+        }
+
+        .example-paths a:before {
+            content: '⇨';
+            font-weight: bold;
+            font-size: 1.5rem;
+            margin: 20px;
+        }
+
+        .example-paths a:hover {
+            background-color: #0d1c2c;
+        }
+
+        .guide-link {
+            background-color: #71aeef;
+            position: absolute;
+            color: white;
+            text-decoration: none;
+            top: 0;
+            right: 0;
+            padding: 7px;
+            font-weight: bold;
+        }
+
+        .guide-link:hover {
+            background-color: #0d1c2c;
+        }
     </style>
 </head>
 <body>
@@ -105,7 +182,7 @@
 
 <div class="container">
     <div class="left-column">
-        <p class="lead"> Congratulations, you have created a new Quarkus application with RESTEasy.</p>
+        <p class="lead"> Congratulations, you have created a new Quarkus cloud application.</p>
 
         <h2>Why do you see this?</h2>
 
@@ -117,18 +194,29 @@
         <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
         </p>
         <ul>
-            <li>Open the example <a href="/resteasy/hello" target="_blank">"/hello"</a> endpoint</li>
-            <li>Add REST resources, Servlets, functions and other services in <code>src/main/java</code>.</li>
-            <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
-            <li>Configure your application in <code>src/main/resources/application.properties</code>.
-            </li>
-        </ul>
+            <li>Play with your example code in <code>src/main/java</code>:
+                <div class="examples">
+<div class="example">
+    <div class="example-header">
+        <h4>RESTEasy JAX-RS</h4>
+        <a href="https://quarkus.io/guides/rest-json" target="_blank" class="guide-link">Guide</a>
+    </div>
+    <div class="example-description">
+        <p>A Hello World RESTEasy resource</p>
 
+    </div>
+    <div class="example-paths">
+        <a href="/hello-resteasy" class="path-link" target="_blank">GET /hello-resteasy</a>
+    </div>
+</div>
+
+                </div>
+            </li>
+            <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
+            <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
+        </ul>
         <h2>Do you like Quarkus?</h2>
         <p>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</p>
-
-        <h2>How do I get rid of this page?</h2>
-        <p>Just delete the <code>src/main/resources/META-INF/resources/index.html</code> file.</p>
     </div>
     <div class="right-column">
         <div class="right-section">
@@ -137,7 +225,7 @@
                 <li>GroupId: org.acme</li>
                 <li>ArtifactId: greeting-quarkus</li>
                 <li>Version: 1.0.0-SNAPSHOT</li>
-                <li>Quarkus Version: 1.8.3.Final</li>
+                <li>Quarkus Version: 1.11.0.Final</li>
             </ul>
         </div>
         <div class="right-section">
